<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chemlogic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_spinner">SIC TRANSIT GLORIA MUNDI</string>

    <string name="balancer_hint_input">Enter a chemical equation to balance.</string>
    <string name="balancer_hint_submit">Balance!</string>
    <string name="balancer_hint_output">Your balanced chemical equation will appear here.</string>
    
    <string name="compounder_hint_input">Enter a chemical name or formula to convert.</string>
    <string name="compounder_hint_submit">Compound!</string>
    <string name="compounder_hint_output">Your chemical name or formula will appear here.</string>
    
    <string name="hint_type_input">Input Type:</string>
    <string name="hint_type_output">Output Type:</string>
       
     <string-array name="balancer_type_array">
        <item>Symbolic</item>
        <item>Word</item>
    </string-array>
    
     <string-array name="compounder_type_array">
         <item>Formula</item>
         <item>Name</item>
     </string-array>
        
     <string-array name="menu_features_array">
         <item>Balancer</item>
         <item>Compounder</item>
         <item>About</item>
     </string-array>
     
     <string name="about_hint_dev_toggle">Developer information...</string>
     <string name="about_hint_reset_prolog">Reset\nProlog</string>
     <string name="about_hint_stop_prolog">Stop\nProlog</string>
     <string name="about_hint_reinstall_app">Re-install\nApp</string>
     <string name="about_copyright">
         <![CDATA[
         <p>Chemlogic: A Logic Programming Computer Chemistry System</p>
         <p>&copy; 2012&ndash;2015 Nicholas Paun</p>
         <br />
         <p>
         <b>View the Chemlogic website: </b><a href="http://icebergsystems.ca/chemlogic">icebergsys.ca/chemlogic</a><br />
         <b>Contact me: </b><a href="mailto:np+chemlogic@icebergsystems.ca">&lt;np@icebergsystems.ca&gt;</a><br />
         <b>Find out more about my other projects: </b><a href="http://icebergsystems.ca/">icebergsys.ca</a>
         </p>
         ]]>
         </string>
</resources>
