<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

       <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
              
                <TextView 
                    android:hint="@string/hint_type_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                
                <Spinner
                  android:id="@+id/compounder_type_input"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
        
        <EditText
            android:id="@+id/chemlogic_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:ems="10" 
            android:hint="@string/compounder_hint_input">
            
            <requestFocus />
        </EditText>
        
        <Button
            android:id="@+id/chemlogic_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/balancer_hint_submit"
            />
        
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp">
            
            <TextView
                android:id="@+id/chemlogic_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/compounder_hint_output"
                android:textIsSelectable="true" />
        
        </ScrollView>
    </LinearLayout>
    
    <include layout="@layout/keyboard_ext" />
</RelativeLayout>		